handle sidebar and search inputs

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,9 +15,11 @@
             </ul>
             <form class="d-flex align-items-center search">
                 <div class="position-relative">
-                    <input class="form-control ps-5 pe-5 searchInput p-2" type="search" placeholder="Search..." aria-label="Search">
-                    <i class="bi bi-search position-absolute" style="left: 10px; top: 50%; transform: translateY(-50%);"></i>
-                    <i class="bi bi-x position-absolute" style="color: #e94d65; top: 50%; right: 10px; transform: translateY(-50%); cursor: pointer;"></i>
+                    <input class="form-control ps-5 pe-5 searchInput p-2" placeholder="Search..." aria-label="Search">
+                    <i class="bi bi-search position-absolute"
+                        style="left: 10px; top: 50%; transform: translateY(-50%);"></i>
+                    <i class="bi bi-x position-absolute"
+                        style="color: #e94d65; top: 50%; right: 10px; transform: translateY(-50%); cursor: pointer;"></i>
                 </div>
             </form>
             <span class="navbar-text" style="color: #173d51;">Hello, {{ userName }}</span>
