--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar d-flex flex-column flex-shrink-0 p-3" style="width: 250px; height: 100vh;">
+<div class="sidebar d-flex flex-column flex-shrink-0">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <div class="row mt-2">
             <div class="col-3">
@@ -13,62 +13,52 @@
     <hr>
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
-            <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/dashboard']">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/dashboard']">
                 <i class="bi bi-house-door-fill me-2"></i> Dashboard
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/users']">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/users']">
                 <i class="bi bi-people-fill me-2"></i> All Users
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/employees']">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/employees']">
                 <i class="bi bi-person-bounding-box me-2"></i> All Employees
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/officalHolidays']">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/officalHolidays']">
                 <i class="bi bi-calendar4-week me-2"></i> Official Holidays
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/attendance']">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/attendance']">
                 <i class="bi bi-clock-history me-2"></i> Attendance
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/departments']">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/departments']">
                 <i class="bi bi-diagram-3 me-2"></i> Departments
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/groups']">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/groups']">
                 <i class="bi bi-people-fill me-2"></i> Groups
             </a>
         </li>
         <li>
-            <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/salary']">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/salary']">
                 <i class="bi bi-wallet2 me-2"></i> Salary
             </a>
         </li>
         <li>
-          <a href="#" class="nav-link d-flex align-items-center"
-          [routerLink]="['/settings']">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/settings']">
                 <i class="bi bi-gear me-2"></i>General settings
-          </a>
-      </li>
+            </a>
+        </li>
         <li>
-            <a href="#" class="nav-link d-flex align-items-center"
-            [routerLink]="['/']" (click)="logout()">
+            <a href="#" class="nav-link d-flex align-items-center" [routerLink]="['/']" (click)="logout()">
                 <i class="bi bi-box-arrow-left me-2"></i> Logout
             </a>
         </li>
