--- a/src/app/pages/department/department.component.html
+++ b/src/app/pages/department/department.component.html
@@ -1,9 +1,7 @@
 <div class="container px-5 py-3">
-
   <!-- backend error -->
   @if (fatechError != '') {
-  <div
-    class="error-permissions d-flex justify-content-center align-items-center h-100">
+  <div class="error-permissions d-flex justify-content-center align-items-center h-100">
     <p class="lead"> You do not have permissions to Access this Page.
       Please Ask Admin to allow View</p>
   </div>
@@ -23,8 +21,7 @@
   </div>
   }
   <div class="d-flex justify-content-end align-items-center mb-4">
-    <app-add-button [entity]="'Department'"
-      [routerLink]="['/departments', 0, 'edit']" />
+    <app-add-button [entity]="'Department'" [routerLink]="['/departments', 0, 'edit']" />
   </div>
 
   <div className="table-responsive mb-4">
@@ -43,16 +40,12 @@
       <ng-container matColumnDef="action" class="col-7">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let department">
-          <button class="btn btn-view me-2"
-            [routerLink]="['/departments', department.id]"><i
-              class="bi bi-eye"></i>
+          <button class="btn btn-view me-2" [routerLink]="['/departments', department.id]"><i class="bi bi-eye"></i>
             View</button>
-          <button class="btn btn-edit mx-2"
-            [routerLink]="['/departments', department.id, 'edit']">
+          <button class="btn btn-edit mx-2" [routerLink]="['/departments', department.id, 'edit']">
             <i class="bi bi-pen"></i> Edit
           </button>
-          <button class="btn btn-delete mx-2"
-            (click)="openDeleteModal(department.id)">
+          <button class="btn btn-delete mx-2" (click)="openDeleteModal(department.id)">
             <i class="bi bi-x-lg"></i> Delete
           </button>
         </td>
@@ -62,14 +55,11 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     @if(showModal){
-    <app-confirm-modal
-      (confirmed)="confirmDelete()"
-      (closed)="closeModal()"
+    <app-confirm-modal (confirmed)="confirmDelete()" (closed)="closeModal()"
       [message]="'Are you sure you want to delete this group?'" />
     }
-
-    <mat-paginator [length]="totalDepartments" [pageSize]="5"
-      [pageSizeOptions]="[5, 10]" showFirstLastButtons class="mt-4">
+    <mat-paginator [length]="totalDepartments" [pageSize]="5" [pageSizeOptions]="[5, 10]" showFirstLastButtons
+      class="mt-4">
     </mat-paginator>
 
   </div>
