--- a/src/app/pages/employees/employees.component.html
+++ b/src/app/pages/employees/employees.component.html
@@ -1,10 +1,10 @@
 <div class="container px-5 py-3">
   <!-- backend error -->
   @if (fatechError != '') {
-    <div class="error-permissions d-flex justify-content-center align-items-center h-100">
-      <p class="lead"> You do not have permissions to Access this Page.
-        Please Ask Admin to allow View</p>
-    </div>
+  <div class="error-permissions d-flex justify-content-center align-items-center h-100">
+    <p class="lead"> You do not have permissions to Access this Page.
+      Please Ask Admin to allow View</p>
+  </div>
   }
   @else {
   <!-- page title component -->
@@ -18,28 +18,25 @@
   }
 
   @if (error) {
-    <div class="alert alert-danger">
-      {{ error }}
-    </div>
+  <div class="alert alert-danger">
+    {{ error }}
+  </div>
   }
-   <!-- Search input -->
+  <!-- Search input -->
   <div class="d-flex justify-content-center align-items-center mb-3">
     <div class="position-relative search-input">
-      <input class="form-control ps-5 pe-5 p-2"
-        id="searchEmployeeName"
-        placeholder="Search By Employee Name"
-        [formControl]="searchControl" type="search" aria-label="Search">
+      <input class="form-control ps-5 pe-5 p-2" id="searchEmployeeName" placeholder="Search By Employee Name"
+        [formControl]="searchControl" aria-label="Search">
       <i class="bi bi-search position-absolute search-icon"></i>
-      <i class="bi bi-x position-absolute clear-search"  (click)="clearSearch()"></i>
+      <i class="bi bi-x position-absolute clear-search" (click)="clearSearch()"></i>
     </div>
   </div>
   @if(noResultsMessage){
-    <p class="text-center text-danger">{{ noResultsMessage }}</p>
+  <p class="text-center text-danger">{{ noResultsMessage }}</p>
   }
-   <!-- add btn components -->
+  <!-- add btn components -->
   <div class="d-flex justify-content-end align-items-center mb-3">
-      <app-add-button [entity]="'Employee'"
-      [routerLink]="['/employees', 0, 'edit']" />
+    <app-add-button [entity]="'Employee'" [routerLink]="['/employees', 0, 'edit']" />
   </div>
   <!-- table -->
   <div className="table-responsive mb-3">
@@ -74,16 +71,13 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef> Action </th>
         <td mat-cell *matCellDef="let employee">
-          <button class="btn btn-view me-2"
-            [routerLink]="['/employees', employee.id]">
+          <button class="btn btn-view me-2" [routerLink]="['/employees', employee.id]">
             <i class="bi bi-eye"></i> View
           </button>
-          <button class="btn btn-edit mx-2"
-            [routerLink]="['/employees', employee.id, 'edit']">
-            <i class="bi bi-pen" ></i> Edit
+          <button class="btn btn-edit mx-2" [routerLink]="['/employees', employee.id, 'edit']">
+            <i class="bi bi-pen"></i> Edit
           </button>
-          <button class="btn btn-delete mx-2"
-            (click)="openDeleteModal(employee.id)">
+          <button class="btn btn-delete mx-2" (click)="openDeleteModal(employee.id)">
             <i class="bi bi-x-lg"></i> Delete
           </button>
         </td>
@@ -94,17 +88,15 @@
     </table>
     <!-- confirm delete -->
     @if(showModal){
-    <app-confirm-modal
-      (confirmed)="confirmDelete()"
-      (closed)="closeModal()"
+    <app-confirm-modal (confirmed)="confirmDelete()" (closed)="closeModal()"
       [message]="'Are you sure you want to delete this employee?'" />
     }
 
     <!--paginator-->
-    <mat-paginator [length]="totalEmployees" [pageSize]="5"
-      [pageSizeOptions]="[5, 10]" showFirstLastButtons class="mt-3">
+    <mat-paginator [length]="totalEmployees" [pageSize]="5" [pageSizeOptions]="[5, 10]" showFirstLastButtons
+      class="mt-3">
     </mat-paginator>
 
   </div>
-}
+  }
 </div>
