--- a/src/app/pages/groups/groups.component.html
+++ b/src/app/pages/groups/groups.component.html
@@ -1,10 +1,10 @@
 <div class="container px-5 py-3">
     <!-- backend error -->
     @if (fatechError != '') {
-      <div class="error-permissions d-flex justify-content-center align-items-center h-100">
+    <div class="error-permissions d-flex justify-content-center align-items-center h-100">
         <p class="lead"> You do not have permissions to Access this Page.
-          Please Ask Admin to allow View</p>
-      </div>
+            Please Ask Admin to allow View</p>
+    </div>
     }
     @else {
     <app-page-title [title]="'All Groups'" />
@@ -16,9 +16,9 @@
     }
 
     @if (error) {
-      <div class="alert alert-danger">
+    <div class="alert alert-danger">
         {{ error }}
-      </div>
+    </div>
     }
     <div class="d-flex justify-content-end align-items-center mb-4">
         <app-add-button [entity]="'Group'" [routerLink]="['/groups/add']" />
@@ -43,8 +43,7 @@
                     <!-- <button class="btn btn-view me-2" [routerLink]="['/groups', group.id]"><i
                             class="bi bi-eye"></i>
                         View</button> -->
-                    <button class="btn btn-delete"
-                    (click)="openDeleteModal(group.id)">
+                    <button class="btn btn-delete" (click)="openDeleteModal(group.id)">
                         <i class="bi bi-x-lg"></i> Delete
                     </button>
                 </td>
@@ -54,9 +53,7 @@
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
         @if(showModal){
-            <app-confirm-modal
-            (confirmed)="confirmDelete()"
-            (closed)="closeModal()"
+        <app-confirm-modal (confirmed)="confirmDelete()" (closed)="closeModal()"
             [message]="'Are you sure you want to delete this Group?'" />
         }
     </div>
