--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -9,19 +9,19 @@
 
   <!-- backend error -->
   @if (fatechError != '') {
-    <div class="error-permissions d-flex justify-content-center align-items-center h-100">
-      <p class="lead"> You do not have permissions to Access this Page.
-        Please Ask Admin to allow View</p>
-    </div>
+  <div class="error-permissions d-flex justify-content-center align-items-center h-100">
+    <p class="lead"> You do not have permissions to Access this Page.
+      Please Ask Admin to allow View</p>
+  </div>
   }
   @else {
   <!-- Page title  -->
   <app-page-title [title]="'All Users'"></app-page-title>
-    @if (error) {
-      <div class="alert alert-danger">
-        {{ error }}
-      </div>
-    }
+  @if (error) {
+  <div class="alert alert-danger">
+    {{ error }}
+  </div>
+  }
   <!-- Add new user button -->
   <div class="d-flex justify-content-end align-items-center mb-4">
     <app-add-button [entity]="'User'" [routerLink]="['/user', 0, 'edit']"></app-add-button>
@@ -41,11 +41,11 @@
         <td mat-cell *matCellDef="let user">{{ user.name }}</td>
       </ng-container>
 
-         <!--Full Name Column -->
-         <ng-container matColumnDef="Full_Name">
-          <th mat-header-cell *matHeaderCellDef>Full Name</th>
-          <td mat-cell *matCellDef="let user">{{ user.Full_name }}</td>
-        </ng-container>
+      <!--Full Name Column -->
+      <ng-container matColumnDef="Full_Name">
+        <th mat-header-cell *matHeaderCellDef>Full Name</th>
+        <td mat-cell *matCellDef="let user">{{ user.Full_name }}</td>
+      </ng-container>
 
       <!-- Email Column -->
       <ng-container matColumnDef="Email">
@@ -78,15 +78,12 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
 
-    <mat-paginator [length]="totalUsers" [pageSize]="5" [pageSizeOptions]="[5, 10]" showFirstLastButtons class="mt-4"></mat-paginator>
+    <mat-paginator [length]="totalUsers" [pageSize]="5" [pageSizeOptions]="[5, 10]" showFirstLastButtons
+      class="mt-4"></mat-paginator>
   </div>
 
   }
   <!-- Confirmation Modal -->
-  <app-confirm-modal
-    *ngIf="showModal"
-    (confirmed)="confirmDelete()"
-    (closed)="closeModal()"
-    [message]="'Are you sure you want to delete this user?'"
-  ></app-confirm-modal>
+  <app-confirm-modal *ngIf="showModal" (confirmed)="confirmDelete()" (closed)="closeModal()"
+    [message]="'Are you sure you want to delete this user?'"></app-confirm-modal>
 </div>
