--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar d-flex flex-column flex-shrink-0">
+<div class="sidebar d-flex flex-column flex-shrink-0 p-3">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
         <div class="row mt-2">
             <div class="col-3">
